fix gap wotj scroll

--- a/src/Components/ImageHorizont/ImageHorizont.css
+++ b/src/Components/ImageHorizont/ImageHorizont.css
@@ -1,9 +1,18 @@
 .image-container {
-  position: relative;
   display: flex;
+  gap: 16px; /* расстояние между двумя картинками */
+  width: 100%;
+  height: 100%;
 }
 
 img.image {
-
+  border-radius: 16px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  display: block;
+
+  flex: 1 1 0; 
+  width: auto; 
+  height: 100%;
 }
